Fixed typos and changed variable names to be more descriptive

--- a/ABM/Week1_PCS.ipynb
+++ b/ABM/Week1_PCS.ipynb
@@ -5,7 +5,7 @@
    "id": "32720351",
    "metadata": {},
    "source": [
-    "We start with the data from 2023 and 2025, because we saw a big change in the politcal field between those two elections. For now as a simplification we will divide the parties into three groups:\n",
+    "We start with the data from 2023 and 2025, because we saw a big change in the political field between those two elections. For now as a simplification we will divide the parties into three groups:\n",
     "- Left: GL_PvdA, SP, PvdD, Volt, DENK, BIJ1, CU\n",
     "- Centre: NSC, VVD, D66, 50Plus\n",
     "- Right: FvD, JA21, BVNL, PVV, BBB, SGP"
@@ -17,14 +17,14 @@
    "metadata": {},
    "source": [
     "#### Vote share\n",
-    "Luckily for us the vote share is know for each of the years and does not need to be calculated manually.\n",
+    "Luckily for us the vote share is known for each of the years and does not need to be calculated manually.\n",
     "\n",
     "(The gap between BIJ 1, which is the party with the lowest amount of votes and the next party is a factor of 4. So BIJ1 is the cutoff point. The remaining parties not included here have a total of 0.4% of the total votes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "ddda04e2",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "8e544da4",
    "metadata": {},
    "outputs": [],
@@ -58,20 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "8c12fab2",
    "metadata": {},
    "outputs": [],
    "source": [
     "def dict_to_party_arrays(party_share_dict):\n",
     "    # Extract the parties from the list\n",
-    "    # Convert into a np array \n",
-    "    # Normalize probabilities so that all prob sum to 1\n",
+    "    # Convert into a numpy array\n",
+    "    # Normalize probabilities so that all probabilities sum to 1\n",
     "    parties = list(party_share_dict.keys())\n",
     "    probs = np.array([party_share_dict[p] for p in parties], dtype=float)\n",
-    "    probs = probs / probs.sum() \n",
+    "    probs /= probs.sum()\n",
     "\n",
-    "    #Create mapping\n",
+    "    # Create mapping\n",
     "    # Party to index and index to party\n",
     "    p2i = {p: i for i, p in enumerate(parties)}\n",
     "    i2p = {i: p for p, i in p2i.items()}\n",
@@ -109,25 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "e139a9e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Create a function that greates different types of graphs.\n",
+    "Create a function that creates different types of graphs.\n",
     "For now the values assigned to the arguments of each graph are arbitrary.\n",
     "\"\"\"\n",
     "def build_graph(N, graph_type ='small_world', seed = 0, **kwargs):\n",
-    "    if graph_type =='small_words':\n",
+    "    if graph_type =='small_world':\n",
     "        k = kwargs.get('k', 10)\n",
     "        p = kwargs.get('p', 0.05)\n",
     "        return nx.watts_strogatz_graph(N,k,p, seed=seed)\n",
-    "    \n",
+    "\n",
     "    if graph_type == 'scale_free':\n",
     "        m = kwargs.get('m', 5)\n",
     "        return nx.barabasi_albert_graph(N,m , seed=seed)\n",
-    "    \n",
+    "\n",
     "    if graph_type =='random':\n",
     "        p = kwargs.get('p', 0.002)\n",
     "        return nx.erdos_renyi_graph(N,p,seed=seed)"
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "9040c212",
    "metadata": {},
    "outputs": [],
@@ -152,49 +152,48 @@
     "\n",
     "    # Convert neighbors of i into an array of integers\n",
     "    for i in range(N):\n",
-    "        adj[i] = np.fromiter(G.neighbors(i),dtype=int)\n",
+    "        adj[i] = np.fromiter(G.neighbors(i), dtype=int)\n",
     "    return adj\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "4ff97987",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "We need to initialise the agents.\n",
-    "For now we will give them a arbitrary distribution for loyalty and susceptibility, later on we can change this. \n",
+    "For now we will give them an arbitrary distribution\n",
+    "for loyalty and susceptibility, later on we can change this.\n",
     "\"\"\"\n",
     "def init_agents(N, probs, L_range=(0.7, 0.95), S_range=(0.3, 1.0), seed=0):\n",
     "    rng = np.random.default_rng(seed)\n",
     "    P = len(probs)\n",
     "\n",
-    "    # assign parties to voters based on the 2023 vote share\n",
+    "    # Assign parties to voters based on the 2023 vote share\n",
     "    # Assign both loyalty and susceptibility\n",
-    "    party = rng.choice(P, size = N, p =probs)\n",
+    "    party = rng.choice(P, size=N, p=probs)\n",
     "    L = rng.uniform(L_range[0], L_range[1], size=N)\n",
     "    S = rng.uniform(S_range[0], S_range[1], size=N)\n",
-    "    return party, L, S\n",
-    "\n",
-    "    \n",
-    "\n"
+    "    return party, L, S\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "a3de986b",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Create some way to stores the atractiveness of a certain party p at time t.\n",
+    "Create some way to store the atractiveness A of a certain party p at time t.\n",
     "Baseline A = 1\n",
-    "Simulate events the alter the atractiveness of party p over a certain time with a certain streng\n",
-    "i.e NSC time_start = 5, time_end, A = 2.5\n",
+    "Simulate events that alter the atractiveness of party p over a certain time\n",
+    "with a certain strength\n",
+    "i.e NSC: time_start = 5, time_end, A = 2.5\n",
     "\"\"\"\n",
     "def attractiveness_tracker(parties, T, events = None):\n",
     "    # Set the initial attractiveness to 1\n",
@@ -212,12 +211,12 @@
     "            idx = name2idx[ev[\"party\"]]\n",
     "            A[ev[\"start\"]:ev[\"end\"], idx] = float(ev[\"A\"])\n",
     "\n",
-    "    return A \n"
+    "    return A\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "8d3ea281",
    "metadata": {},
    "outputs": [],
@@ -226,27 +225,27 @@
     "This calcules the fi(t) from the model decription.\n",
     "It calculates the fraction of neighbors of votes i which support party p.\n",
     "\"\"\"\n",
-    "def neighbor_fraction_party(party, neighbors, P):\n",
+    "def neighbor_fraction_party(party, neighbors, num_parties):\n",
     "    # find the amount of neighbors\n",
     "    degree = len(neighbors)\n",
     "\n",
-    "    # special case if degree == 0 \n",
+    "    # special case if degree == 0\n",
     "    # voter has no neighbors so environment has no influence on this votes\n",
     "    if degree == 0:\n",
-    "        return np.ones(P)/P\n",
-    "    \n",
+    "        return np.ones(num_parties) / num_parties\n",
+    "\n",
     "    # get the party label of the neighbors\n",
     "    # count how many neighbors belong to each party\n",
     "    # return the normalized probability so that it sums to 1\n",
     "    neigh_parties = party[neighbors]\n",
-    "    counts = np.bincount(neigh_parties, minlength=P).astype(float)\n",
+    "    counts = np.bincount(neigh_parties, minlength=num_parties).astype(float)\n",
     "    return counts/ counts.sum()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "ec0f38a9",
    "metadata": {},
    "outputs": [],
@@ -256,19 +255,23 @@
     "Uses the neighbor fraction calculated above.\n",
     "Also uses attractiveness, susceptibility, Beta, Gamma.\n",
     "\"\"\"\n",
-    "def compute_probs(f, S_i, beta, gamma, A_t):\n",
+    "def compute_probs(\n",
+    "        neighbor_fraction, susceptibility,\n",
+    "        peer_pressure_strength, events_strength, attractiveness\n",
+    "    ):\n",
     "    # compute scores and normalizee\n",
-    "    scores = np.exp(beta*S_i*f)*A_t**gamma\n",
-    "    s = scores.sum()\n",
-    "    return scores/s\n",
+    "    scores = np.exp(\n",
+    "        peer_pressure_strength * susceptibility * neighbor_fraction\n",
+    "        + events_strength * np.log(attractiveness)\n",
+    "    )\n",
+    "    scores /= scores.sum()\n",
     "\n",
-    "\n",
-    "\n"
+    "    return scores\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "c048183b",
    "metadata": {},
    "outputs": [],
@@ -280,22 +283,28 @@
     "Compute Pi(p) from f and A(t)\n",
     "Sample a new party from Pi(p)\n",
     "\"\"\"\n",
-    "def update_voter(i, party, L, S, adj, beta, gamma, A_t, rng):\n",
+    "def update_voter(\n",
+    "        voter_index, party, loyalty, susceptibility, neighbors,\n",
+    "        peer_pressure_strength, events_strength, attractiveness, rng\n",
+    "    ):\n",
     "    # voter keeps the same party if rng is smaller than loyalty\n",
-    "    if rng.random < L(i):\n",
+    "    if rng.random < loyalty(voter_index):\n",
     "        return\n",
-    "    \n",
+    "\n",
     "    # compute f\n",
-    "    P = len(A_t)\n",
-    "    f = neighbor_fraction_party(party, adj[i], P)\n",
+    "    num_parties = len(attractiveness)\n",
+    "    neighbor_votes = neighbor_fraction_party(\n",
+    "        party, neighbors[voter_index], num_parties\n",
+    "    )\n",
     "\n",
     "    #Compute Pi(p)\n",
-    "    probs = compute_probs(f, S[i], beta, gamma, A_t)\n",
+    "    probs = compute_probs(\n",
+    "        neighbor_votes, susceptibility[voter_index],\n",
+    "        peer_pressure_strength, events_strength, attractiveness\n",
+    "    )\n",
     "\n",
     "    #Sample new party\n",
-    "    party[i] = rng.choice(P, p=probs)\n",
-    "\n",
-    "    "
+    "    party[voter_index] = rng.choice(num_parties, p=probs)\n"
    ]
   },
   {
@@ -319,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.13.1",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -333,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
