Added a more detailed desciption for all the function. Started with the simulation functoin.

--- a/ABM/Week1_PCS.ipynb
+++ b/ABM/Week1_PCS.ipynb
@@ -109,25 +109,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e139a9e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
     "Create a function that creates different types of graphs.\n",
-    "For now the values assigned to the arguments of each graph are arbitrary.\n",
+    "N: Number of voters (agents) in the model.\n",
+    "graph type: different types of graphs to generate: 'small-world', 'scale-free','random'.\n",
+    "seed: random seed for reproducibility.\n",
+    "**kwargs: extra parameters depending on the graph tupe.\n",
+    "Returns: The respective generated graph type.\n",
+    "Note: for now, graph parameters are abitrary.\n",
     "\"\"\"\n",
     "def build_graph(N, graph_type ='small_world', seed = 0, **kwargs):\n",
+    "    #k: number of neighbors.\n",
+    "    #p: rewire probability.\n",
     "    if graph_type =='small_world':\n",
     "        k = kwargs.get('k', 10)\n",
     "        p = kwargs.get('p', 0.05)\n",
     "        return nx.watts_strogatz_graph(N,k,p, seed=seed)\n",
     "\n",
+    "    #m: edges to attach per new node.\n",
     "    if graph_type == 'scale_free':\n",
     "        m = kwargs.get('m', 5)\n",
     "        return nx.barabasi_albert_graph(N,m , seed=seed)\n",
     "\n",
+    "    #p: edge probability.\n",
     "    if graph_type =='random':\n",
     "        p = kwargs.get('p', 0.002)\n",
     "        return nx.erdos_renyi_graph(N,p,seed=seed)"
@@ -135,14 +144,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "9040c212",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Use an adjacency list to reduce computation time.\n",
-    "We also need to make sure that the neighbor order remains the same.\n",
+    "Converts a (networkx) graph into an adjacency list.\n",
+    "adj[i]: numpy array of the neighbors of node i.\n",
+    "G: graph with nodes 0....N-1.\n",
+    "adj: list of neighbors.\n",
     "\"\"\"\n",
     "def adjacency_list(G):\n",
     "    # total number of voters\n",
@@ -159,15 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4ff97987",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "We need to initialise the agents.\n",
-    "For now we will give them an arbitrary distribution\n",
-    "for loyalty and susceptibility, later on we can change this.\n",
+    "Initialize the voter population.\n",
+    "Each voter i has:\n",
+    "- party[i]\n",
+    "-L[i]: loyalty between [0,1] probability that the voter refuses to chose a new party.\n",
+    "-S[i]: susceptibility between [0,1], strength of social influence.\n",
+    "N: number of voters.\n",
+    "probs: party probabilities based on the election results of year 2xxx.\n",
+    "L_range: range of which loyalty is drawn from.\n",
+    "S-range: range of which susceptibility is drawn from.\n",
+    "seed: random seed for reproducibility.\n",
+    "party: party assignment for each voter.\n",
+    "L: loyalty value per voter.\n",
+    "S: susceptibility per voter.\n",
     "\"\"\"\n",
     "def init_agents(N, probs, L_range=(0.7, 0.95), S_range=(0.3, 1.0), seed=0):\n",
     "    rng = np.random.default_rng(seed)\n",
@@ -183,17 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a3de986b",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Create some way to store the atractiveness A of a certain party p at time t.\n",
-    "Baseline A = 1\n",
-    "Simulate events that alter the atractiveness of party p over a certain time\n",
-    "with a certain strength\n",
-    "i.e NSC: time_start = 5, time_end, A = 2.5\n",
+    "Build matrix A where A[t,p]: attractiveness of party p at time t.\n",
+    "Attractiveness tries to capture shocks like: new party arrival, a scandal, media boost, etc.\n",
+    "Baseline A =1.\n",
+    "parties: party names.\n",
+    "T: number of time steps.\n",
+    "events: a dictionary of events. \n",
+    "eg. {'party':NSC, 'start':5,'end':20, 'A':2.5}\n",
+    "A: attractiveness over time.\n",
     "\"\"\"\n",
     "def attractiveness_tracker(parties, T, events = None):\n",
     "    # Set the initial attractiveness to 1\n",
@@ -216,14 +240,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "8d3ea281",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "This calcules the fi(t) from the model decription.\n",
-    "It calculates the fraction of neighbors of votes i which support party p.\n",
+    "Compute fi(t): the fraction of voter i's neighbors supporting party p.\n",
+    "party: party[j] gives the party of neighbor j.\n",
+    "neighbors: neighbor indices of agent i.\n",
+    "P; number of parties.\n",
+    "f: fraction of neighbors in each party.\n",
     "\"\"\"\n",
     "def neighbor_fraction_party(party, neighbors, num_parties):\n",
     "    # find the amount of neighbors\n",
@@ -245,15 +272,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ec0f38a9",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Compute the probability based on the score (formula mentioned in project plan).\n",
-    "Uses the neighbor fraction calculated above.\n",
-    "Also uses attractiveness, susceptibility, Beta, Gamma.\n",
+    "Compute the choice probability of a voter based on:\n",
+    "-f: neighbor party fractions for voter i.\n",
+    "- S_i: susceptibility\n",
+    "- beta: strength of peer pressure.\n",
+    "- gamma: strength of external events.\n",
+    "- A_t: attractiveness.\n",
+    "score(i,p): = exp(beta*S_i*f_p) * A_p^gamma.\n",
+    "P_i(p): score_(i,p)/sum_q * score_(i,q).\n",
+    "scores: probability distribution across parties (normalized so that is sums to 1).\n",
     "\"\"\"\n",
     "def compute_probs(\n",
     "        neighbor_fraction, susceptibility,\n",
@@ -271,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "c048183b",
    "metadata": {},
    "outputs": [],
@@ -305,6 +338,68 @@
     "\n",
     "    #Sample new party\n",
     "    party[voter_index] = rng.choice(num_parties, p=probs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d75d328",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Run the ABM and record vote shares.\n",
+    "N: Number of voters.\n",
+    "parties: party names, lenghts P.\n",
+    "probs_2023: initial vote probabilities based on the 2023 election results.\n",
+    "T: number of time steps (months for now).\n",
+    "microsteps_per_t: number of times a voter is updated per time step. Default = N.\n",
+    "beta, gamma: model parameters controlling social and event strength.\n",
+    "L_range, S_range: loyalty and susceptibility ranges.\n",
+    "graph_type: type of graph.\n",
+    "graph_kwargs: parameters for the chosen graph.\n",
+    "events: definition of a attractiveness event.\n",
+    "seed: ranomd seed for reproducibility.\n",
+    "history: array with shape (T+1, P). \n",
+    "history[t,p]= vote share of party p at time t.\n",
+    "\"\"\"\n",
+    "def simulate_amb(\n",
+    "        N, parties, probs_2023, T= 24, beta = 3.0,\n",
+    "        gamme =1.0, L_range=(0.7,0.95), S_range=(0.3,1.0),\n",
+    "        graph_type=\"small_world\",microsteps_per_t=None, graph_kwargs =None,\n",
+    "        events =None, seed = 0\n",
+    "        ):\n",
+    "    #set the default graph type to small world\n",
+    "    if graph_kwargs is None:\n",
+    "        graph_kwargs ={\"k\": 10, \"p\":0.05}\n",
+    "\n",
+    "    # Updates per time step\n",
+    "    # default = N\n",
+    "    # can be used to scale down from month to week for example\n",
+    "    if microsteps_per_t is None:\n",
+    "        microsteps_per_t = N\n",
+    "\n",
+    "    rng = np.random.default_rng(seed)\n",
+    "    P = len(parties)\n",
+    "\n",
+    "    # initialize voters using 2023 data\n",
+    "    party, L, S = init_agents(\n",
+    "        N, probs_2023,\n",
+    "        L_range=L_range,\n",
+    "        S_range=S_range,\n",
+    "        seed = seed\n",
+    "    )\n",
+    "\n",
+    "    # create graph + adjencey list\n",
+    "    G = build_graph(N, graph_type=graph_type, seed=seed, **graph_kwargs)\n",
+    "    adj = adjacency_list(G)\n",
+    "\n",
+    "    # create the attractiveness \n",
+    "    A = attractiveness_tracker(parties, T, events=events)\n",
+    "\n",
+    "    # create array to store party shares\n",
+    "    history = np.zeros((T + 1, P)dtype=float)\n",
+    "\n"
    ]
   },
   {
