Finished the simulation function.

--- a/ABM/Week1_PCS.ipynb
+++ b/ABM/Week1_PCS.ipynb
@@ -399,6 +399,28 @@
     "\n",
     "    # create array to store party shares\n",
     "    history = np.zeros((T + 1, P)dtype=float)\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Compute the vote shares and store them into history[i_index].\n",
+    "    \"\"\"\n",
+    "    def record(t_index):\n",
+    "        counts = np.bincount(party, minlength=P).astype(float)\n",
+    "        history[t_index] = counts / counts.sum()\n",
+    "\n",
+    "    # record the initail distribution\n",
+    "    record(0)\n",
+    "\n",
+    "    for t in range(T):\n",
+    "        A_t =A[t]\n",
+    "        # run the microsteps\n",
+    "        for _ in range(microsteps_per_t):\n",
+    "            i = rng.integers(0,N)\n",
+    "            update_voter = (i, party, L, S, adj, beta, gamma, A_t, rng)\n",
+    "        record(t+1)\n",
+    "\n",
+    "    return history, party\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
