2025 left-right party data from KiesKompas

--- a/read_data.ipynb
+++ b/read_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "id": "85b232d5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 33,
    "id": "d41dc964",
    "metadata": {},
    "outputs": [
@@ -1728,20 +1728,20 @@
        "[53 rows x 23 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parties = ['GL', 'PvdA', 'SP', 'PvdD', 'VN', 'DENK', 'CU', 'VVD', 'D66', '50+', 'FvD', 'JA21', 'PVV', 'BBB', 'SGP']\n",
+    "parties = ['GL', 'PvdA', 'SP', 'PvdD', 'VN', 'DENK', 'CU', 'VVD', 'D66', '50+', 'FvD', 'JA21', 'PVV', 'BBB', 'SGP', 'CDA']\n",
     "df = pd.read_csv('view_party.csv').loc[lambda df: df['country_name'] == 'Netherlands']\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 34,
    "id": "e27f0d7b",
    "metadata": {},
    "outputs": [
@@ -1763,13 +1763,87 @@
       "Party JA21 : 8.7\n",
       "Party PVV : 8.8\n",
       "Party BBB : 5.3\n",
-      "Party SGP : 8.7531\n"
+      "Party SGP : 8.7531\n",
+      "Party CDA : 5.9376\n"
      ]
     }
    ],
    "source": [
     "for party in parties:\n",
     "    print('Party', party, ':', np.asarray(df.loc[lambda df: df['party_name_short'] == party]['left_right'])[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "138cecb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Left-right party data from 2025 Kieskompas\n",
+    "# https://tweedekamer2025.kieskompas.nl/nl/results/compass#\n",
+    "left = {\n",
+    "    'PvdD': 0.96,\n",
+    "    'VN': 0.54,\n",
+    "    'GLPvdA': 0.62,\n",
+    "    'SP': 0.81,\n",
+    "    'DENK': 0.54,\n",
+    "    'D66': 0.27,\n",
+    "    'CU': 0.27,\n",
+    "    'NSC': 0.08\n",
+    "    }\n",
+    "right = {\n",
+    "    'CDA': 0.12,\n",
+    "    '50+': 0.04,\n",
+    "    'SGP': 0.27,\n",
+    "    'VVD': 0.69,\n",
+    "    'PVV': 0.38,\n",
+    "    'BBB': 0.65,\n",
+    "    'JA21': 0.81,\n",
+    "    'FvD': 0.88\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "012a5152",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'PvdD': 0.2,\n",
+       " 'VN': 2.3,\n",
+       " 'GLPvdA': 1.9,\n",
+       " 'SP': 0.95,\n",
+       " 'DENK': 2.3,\n",
+       " 'D66': 3.65,\n",
+       " 'CU': 3.65,\n",
+       " 'NSC': 4.6,\n",
+       " 'CDA': 5.6,\n",
+       " '50+': 5.2,\n",
+       " 'SGP': 6.35,\n",
+       " 'VVD': 8.45,\n",
+       " 'PVV': 6.9,\n",
+       " 'BBB': 8.25,\n",
+       " 'JA21': 9.05,\n",
+       " 'FvD': 9.4}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parties_new = {}\n",
+    "\n",
+    "for party in left:\n",
+    "    parties_new[party] = round(5 - left[party] * 5, 2)\n",
+    "for party in right:\n",
+    "    parties_new[party] = 5 + right[party] * 5\n",
+    "parties_new"
    ]
   }
  ],
