--- a/read_data.ipynb
+++ b/read_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "id": "85b232d5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "id": "d41dc964",
    "metadata": {},
    "outputs": [
@@ -1728,7 +1728,7 @@
        "[53 rows x 23 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1741,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "e27f0d7b",
    "metadata": {},
    "outputs": [
@@ -1775,38 +1775,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "138cecb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'PvdD': 0.25,\n",
+       " 'VN': 4.3,\n",
+       " 'GLPvdA': 2.25,\n",
+       " 'SP': 1.15,\n",
+       " 'DENK': 1.6,\n",
+       " 'D66': 4.75,\n",
+       " 'CU': 3.4,\n",
+       " 'NSC': 4.55,\n",
+       " '50+': 3.85,\n",
+       " 'CDA': 6.15,\n",
+       " 'SGP': 6.35,\n",
+       " 'VVD': 7.5,\n",
+       " 'PVV': 5.45,\n",
+       " 'BBB': 5.45,\n",
+       " 'JA21': 8.85,\n",
+       " 'FvD': 8.2}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Left-right party data from 2025 Kieskompas\n",
-    "# https://tweedekamer2025.kieskompas.nl/nl/results/compass#\n",
-    "left = {\n",
-    "    'PvdD': 0.96,\n",
-    "    'VN': 0.54,\n",
-    "    'GLPvdA': 0.62,\n",
-    "    'SP': 0.81,\n",
-    "    'DENK': 0.54,\n",
-    "    'D66': 0.27,\n",
-    "    'CU': 0.27,\n",
-    "    'NSC': 0.08\n",
+    "# Left-right party data from 2022 Kieskompas\n",
+    "# https://tweedekamer2023.kieskompas.nl/nl/results/compass#\n",
+    "left_2023 = {\n",
+    "    'PvdD': 0.95,\n",
+    "    'VN': 0.14,\n",
+    "    'GLPvdA': 0.55,\n",
+    "    'SP': 0.77,\n",
+    "    'DENK': 0.68,\n",
+    "    'D66': 0.05,\n",
+    "    'CU': 0.32,\n",
+    "    'NSC': 0.09,\n",
+    "    '50+': 0.23\n",
     "    }\n",
-    "right = {\n",
-    "    'CDA': 0.12,\n",
-    "    '50+': 0.04,\n",
+    "right_2023 = {\n",
+    "    'CDA': 0.23,\n",
     "    'SGP': 0.27,\n",
-    "    'VVD': 0.69,\n",
-    "    'PVV': 0.38,\n",
-    "    'BBB': 0.65,\n",
-    "    'JA21': 0.81,\n",
-    "    'FvD': 0.88\n",
-    "}"
+    "    'VVD': 0.5,\n",
+    "    'PVV': 0.09,\n",
+    "    'BBB': 0.09,\n",
+    "    'JA21': 0.77,\n",
+    "    'FvD': 0.64\n",
+    "}\n",
+    "\n",
+    "parties_2023 = {}\n",
+    "\n",
+    "for party in left_2023:\n",
+    "    parties_2023[party] = round(5 - left_2023[party] * 5, 2)\n",
+    "for party in right_2023:\n",
+    "    parties_2023[party] = 5 + right_2023[party] * 5\n",
+    "parties_2023"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "id": "012a5152",
    "metadata": {},
    "outputs": [
@@ -1831,19 +1865,76 @@
        " 'FvD': 9.4}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "parties_new = {}\n",
+    "# Left-right party data from 2025 Kieskompas\n",
+    "# https://tweedekamer2025.kieskompas.nl/nl/results/compass#\n",
+    "left_2025 = {\n",
+    "    'PvdD': 0.96,\n",
+    "    'VN': 0.54,\n",
+    "    'GLPvdA': 0.62,\n",
+    "    'SP': 0.81,\n",
+    "    'DENK': 0.54,\n",
+    "    'D66': 0.27,\n",
+    "    'CU': 0.27,\n",
+    "    'NSC': 0.08\n",
+    "    }\n",
+    "right_2025 = {\n",
+    "    'CDA': 0.12,\n",
+    "    '50+': 0.04,\n",
+    "    'SGP': 0.27,\n",
+    "    'VVD': 0.69,\n",
+    "    'PVV': 0.38,\n",
+    "    'BBB': 0.65,\n",
+    "    'JA21': 0.81,\n",
+    "    'FvD': 0.88\n",
+    "}\n",
     "\n",
-    "for party in left:\n",
-    "    parties_new[party] = round(5 - left[party] * 5, 2)\n",
-    "for party in right:\n",
-    "    parties_new[party] = 5 + right[party] * 5\n",
-    "parties_new"
+    "parties_2025 = {}\n",
+    "\n",
+    "for party in left_2025:\n",
+    "    parties_2025[party] = round(5 - left_2025[party] * 5, 2)\n",
+    "for party in right_2025:\n",
+    "    parties_2025[party] = 5 + right_2025[party] * 5\n",
+    "parties_2025"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "fb5f9f07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Left-Right difference: -0.05\n",
+      "Left-Right difference: -2.0\n",
+      "Left-Right difference: -0.35\n",
+      "Left-Right difference: -0.2\n",
+      "Left-Right difference: 0.7\n",
+      "Left-Right difference: -1.1\n",
+      "Left-Right difference: 0.25\n",
+      "Left-Right difference: 0.05\n",
+      "Left-Right difference: 1.35\n",
+      "Left-Right difference: -0.55\n",
+      "Left-Right difference: 0.0\n",
+      "Left-Right difference: 0.95\n",
+      "Left-Right difference: 1.45\n",
+      "Left-Right difference: 2.8\n",
+      "Left-Right difference: 0.2\n",
+      "Left-Right difference: 1.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for party in parties_2023:\n",
+    "    print(\"Left-Right difference:\", round(parties_2025[party] - parties_2023[party], 2))"
    ]
   }
  ],
