Refactor party data normalization and improve output formatting
- Added normalization for party percentages in Week2_PCS.ipynb.
- Introduced a new dictionary for party biases in Week2_PCS.ipynb.
- Updated the output format for left-right differences in read_data.ipynb to enhance readability.
- Changed execution counts to null for cells that are not executed in Week2_PCS.ipynb.

--- a/read_data.ipynb
+++ b/read_data.ipynb
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "id": "fb5f9f07",
    "metadata": {},
    "outputs": [
@@ -1913,28 +1913,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Left-Right difference: -0.05\n",
-      "Left-Right difference: -2.0\n",
-      "Left-Right difference: -0.35\n",
-      "Left-Right difference: -0.2\n",
-      "Left-Right difference: 0.7\n",
-      "Left-Right difference: -1.1\n",
-      "Left-Right difference: 0.25\n",
-      "Left-Right difference: 0.05\n",
-      "Left-Right difference: 1.35\n",
-      "Left-Right difference: -0.55\n",
-      "Left-Right difference: 0.0\n",
-      "Left-Right difference: 0.95\n",
-      "Left-Right difference: 1.45\n",
-      "Left-Right difference: 2.8\n",
-      "Left-Right difference: 0.2\n",
-      "Left-Right difference: 1.2\n"
+      "Left-Right differences per party:\n",
+      "PvdD:\t -0.05\n",
+      "VN:\t -2.0\n",
+      "GLPvdA:\t -0.35\n",
+      "SP:\t -0.2\n",
+      "DENK:\t 0.7\n",
+      "D66:\t -1.1\n",
+      "CU:\t 0.25\n",
+      "NSC:\t 0.05\n",
+      "50+:\t 1.35\n",
+      "CDA:\t -0.55\n",
+      "SGP:\t 0.0\n",
+      "VVD:\t 0.95\n",
+      "PVV:\t 1.45\n",
+      "BBB:\t 2.8\n",
+      "JA21:\t 0.2\n",
+      "FvD:\t 1.2\n"
      ]
     }
    ],
    "source": [
+    "print(\"Left-Right differences per party:\")\n",
     "for party in parties_2023:\n",
-    "    print(\"Left-Right difference:\", round(parties_2025[party] - parties_2023[party], 2))"
+    "    print(f\"{party}:\\t\", round(parties_2025[party] - parties_2023[party], 2))"
    ]
   }
  ],
