--- a/Week2_PCS.ipynb
+++ b/Week2_PCS.ipynb
@@ -44,19 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": null,
    "id": "8e544da4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# parties2023 = {\n",
+    "#     'GL_PvdA': 0.1575, 'SP': 0.0315, 'PvdD': 0.0225,\n",
+    "#     'Volt': 0.0171, 'DENK': 0.0237, 'BIJ1': 0.0042,\n",
+    "#     'CU': 0.0204, 'NSC': 0.1288, 'VVD': 0.1524,\n",
+    "#     'D66': 0.0629, '50Plus': 0.0049, 'FvD': 0.0223,\n",
+    "#     'JA21': 0.0068, 'BVNL': 0.0051, 'PVV': 0.2349,\n",
+    "#     'BBB': 0.0465, 'SGP': 0.0208\n",
+    "# }\n",
     "parties2023 = {\n",
     "    'GL_PvdA': 0.1575, 'SP': 0.0315, 'PvdD': 0.0225,\n",
-    "    'Volt': 0.0171, 'DENK': 0.0237, 'BIJ1': 0.0042,\n",
+    "    'Volt': 0.0171, 'DENK': 0.0237,\n",
     "    'CU': 0.0204, 'NSC': 0.1288, 'VVD': 0.1524,\n",
     "    'D66': 0.0629, '50Plus': 0.0049, 'FvD': 0.0223,\n",
     "    'JA21': 0.0068, 'BVNL': 0.0051, 'PVV': 0.2349,\n",
     "    'BBB': 0.0465, 'SGP': 0.0208\n",
     "}\n",
+    "\n",
+    "total = 0\n",
+    "for party in parties2023:\n",
+    "    total += parties2023[party]\n",
+    "for party in parties2023:\n",
+    "    parties2023[party] /= total\n",
     "\n",
     "# Create left,right, centre list\n",
     "left_keys = ['GL_PvdA', 'SP', 'PvdD', 'Volt', 'DENK', 'BIJ1', 'CU']\n",
@@ -66,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": null,
    "id": "66d5a8f5",
    "metadata": {},
    "outputs": [
@@ -106,6 +120,25 @@
     "    'D66': 4.5066, '50Plus': 5, 'FvD': 8.7,\n",
     "    'JA21': 8.7, 'BVNL': 5, 'PVV': 8.8,\n",
     "    'BBB': 5.3, 'SGP': 8.7531\n",
+    "}\n",
+    "\n",
+    "# 2023 data\n",
+    "parties_bias = {\n",
+    "    'GL_PvdA': 2.25,\n",
+    "    'SP': 1.15,\n",
+    "    'PvdD': 0.25,\n",
+    "    'Volt': 4.3,\n",
+    "    'DENK': 1.6,\n",
+    "    'CU': 3.4,\n",
+    "    'NSC': 4.55,\n",
+    "    'VVD': 7.5,\n",
+    "    'D66': 4.75,\n",
+    "    '50Plus': 3.85,\n",
+    "    'FvD': 8.2,\n",
+    "    'JA21': 8.85,\n",
+    "    'PVV': 5.45,\n",
+    "    'BBB': 5.45,\n",
+    "    'SGP': 6.35\n",
     "}\n",
     "\n",
     "parties_bias_vibes = np.array([0.15, 0.05, 0.20, 0.25, 0.30, 0.00, 0.35, 0.50, 0.65, 0.55, 0.60, 0.85, 0.80, 0.90, 0.95, 0.75, 0.88])\n",
@@ -1066,7 +1099,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.7)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
